# NetGuard

./: .env.example  .gitignore  .pre-commit-config.yaml  .precommit-config.yaml  Dockerfile  Justfile  LICENSE  Makefile  README.md  SECURITY_NOTES.md  capture_tests.txt  data_flow.mermaid  docker-compose.prod.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  refactor_review.md  requirements.txt  test_realtime_display.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.githooks/: commit-msg.sh  common.sh  pre-commit.sh  pre-push.sh
.zed/: settings.json
archive/docker_files/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
archive/plantilla_readme/: bad.md  good.md
archive/tests.backup/: conftest.py  reorganize_tests.sh  test_sniffer_config_docs.py
archive/tests.backup/ml/: test_errors.py  test_parquet_analysis.py  test_preprocessing_config.py  test_utils.py  test_workflows.py
archive/tests.backup/unit/: test_packet_capture.py  test_packet_methods.py  test_sniffer_exceptions.py
configs/: prometheus.yml  sniffer_config.yaml
docs/: README.md  index.md
docs/api/: cli-reference.md  endpoints.md  getting-started.md  index.md
docs/api/python/: analysis.md  capture.md  core.md  workflows.md
docs/api/rust/: index.md
docs/architecture/: data-plane.md  index.md  ipc.md  orchestrator.md  python-core.md
docs/architecture/decisions/: 001-stub.md  002-stub.md  003-stub.md  004-stub.md  005-stub.md  006-stub.md  007-stub.md  008-stub.md  009-stub.md  010-stub.md  011-stub.md  012-stub.md  013-stub.md  014-stub.md  015-stub.md  016-stub.md  017-stub.md  018-stub.md  index.md
docs/development/: architecture.md  contributing.md  index.md  project-review.md  security.md  setup.md  testing.md
docs/getting-started/: first-run.md  index.md  installation.md  quick-start.md
docs/latex/: main.tex
docs/latex/figures/: README.md  architecture_diagram_mermaid.md  architecture_diagram_simple.md
docs/latex/references/: references.bib
docs/latex/sections/: api.tex  architecture.tex  cicd.tex  cicd_introduction.tex  components.tex  conclusion.tex  configuration.tex  development.tex  future_work.tex  installation.tex  introduction.tex  ml_models.tex  performance.tex  security.tex  usage.tex
docs/latex_apa_es/: main.tex
docs/latex_apa_es/references/: referencias.bib
docs/latex_apa_es/sections/: api.tex  arquitectura.tex  componentes.tex  conclusion.tex  configuracion.tex  desarrollo.tex  instalacion.tex  introduccion.tex  modelos_ml.tex  rendimiento.tex  seguridad.tex  trabajo_futuro.tex  uso.tex
docs/markdown_project/sniffer/: exceptions.md  interfaces.md  loggers.md  packet_capture.md  parquet_processing.md
docs/markdown_project/utils/: logger.md  (+1 more)
docs/ml/: architecture.md  index.md  installation.md  mkdocs.yml  quickstart.md
docs/models/: data-structures.md  getting-started.md  index.md
docs/project-notes/: ARQUITECTURE.md  CLEANUP_SUMMARY.md  DOCUMENTATION.md  IMPLEMENTATION.md  STATE_MACHINE.md  TODO.md  VISION.md
docs/project-review/: REVIEW.md
docs/sniffer/: configuration.md  getting-started.md  index.md  packet-filtering.md
docs/stylesheets/: extra.css
docs/user-guide/: capture.md  configuration.md  index.md  troubleshooting.md  workflows.md
docs/utils/: configuration.md  index.md  logging.md  performance-metrics.md
important-readmes/: context-devlog.md  logging-functionality.md
important-readmes/daily-devlogs/: 06-04-2025_devlog_1_ruff_changes.md  06-05-2025_devlog_performance.md  06-09-2025_devlog_simplifying_models.md  06-23-2025_devlog_sniffer_v1.md  first.md
important-readmes/security/: SECURITY_NOTES.md  dependency-vulnerabilities.md
important-readmes/testing/: TESTING_RECOMMENDATIONS.md
netguard-launcher/: ARCHITECTURE.md  Cargo.toml
netguard-launcher/.claude/: CLAUDE.md
netguard-launcher/.claude/.claude/: settings.json
netguard-launcher/.claude/.claude/commands/: new-feature.md  phase-gate.md  update-context.md  write-tests.md
netguard-launcher/.claude/.claude/rules/: adr-decisions.md  error-handling.md  python-boundary.md
netguard-launcher/.claude/commands/: document-errors.md
netguard-launcher/.claude/rules/: ipc-protocol.md  state-machine.md
netguard-launcher/.claude/scripts/: create_claude.sh
netguard-launcher/docs/: IMPLEMENTATION_TODO.md
netguard-launcher/docs/TODO/: README.md  phase-1-foundation.md  phase-2-ipc.md  phase-3-cli.md  phase-4-hardening.md
netguard-launcher/docs/project-notes/: 2026-03-18-review.md  2026-03-19-state-machine-fixes.md  README.md
netguard-launcher/src/: error.rs  lib.rs  main.rs  types.rs
netguard-launcher/src/core/: error.rs  mod.rs
netguard-launcher/src/display/: error.rs  mod.rs
netguard-launcher/src/infra/: mod.rs
netguard-launcher/src/infra/config/: error.rs
netguard-launcher/src/infra/ipc/: error.rs  mod.rs
netguard-launcher/src/infra/logging/: error.rs
netguard-launcher/src/infra/permissions/: error.rs  mod.rs
netguard-launcher/src/infra/python/: error.rs  mod.rs
netguard-launcher/src/orchestrator/: error.rs  mod.rs  state.rs
scripts/dev/: build_docs.sh  cache_clearing.sh  collect_project_context.sh  compile_latex.sh  init_githooks.sh  serve_docs.sh  serve_ml_docs.sh  setup_script.sh
scripts/tools/: collect_context.py  manage.py
shell_scripts/: convert_mermaid.sh  packets_direct_1751297097.parquet  sniffer_testing.sh
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/development/: index.html
site/ml/: index.html
site/models/: index.html
site/search/: search_index.json
site/sniffer/: index.html
site/utils/: index.html
src/: logs_read.py
src/examples/: config_examples.py
src/netguard/: main.py
src/network_security_suite/: __init__.py  main.py
tests/: conftest.py  test_sniffer_config_docs.py
tests/ml/: __init__.py  test_errors.py  test_parquet_analysis.py  test_preprocessing_config.py  test_utils.py  test_workflows.py
tests/qol/: test_refactor.py
tests/unit/: test_packet_capture.py  test_packet_methods.py  test_sniffer_exceptions.py
(+195 files in other folders)
