[project]
name = "network-security-suite"
version = "0.1.0"
description = "Enterprise-level network security sniffer with ML capabilities"
authors = [{name = "Juan Julián Paniagua Rico"}]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "scapy>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-extra-types>=2.1.0",
    "pandas>=2.1.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "asyncio>=3.4.3",
    "python-multipart>=0.0.18",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "netifaces>=0.11.0",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "mkdocs-material>=9.6.22",
    "mkdocstrings[python]>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=24.3.0",
    "mypy>=1.6.0",
    "pylint>=3.0.0",
    "ruff>=0.1.6",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
    "pre-commit>=3.5.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "faker>=19.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "scapy.*",
    "sklearn.*",
    "netifaces.*",
    "pandas.*",
]
ignore_missing_imports = true

# Pylint configuration
[tool.pylint.messages_control]
disable = [
    "R0903",  # Too few public methods
    "R0801",  # Similar lines in files
    "W0718",  # Catching too general exception Exception (broad-exception-caught)
    "R1702",  # Too many nested blocks
    "R0911",  # Too many return statements
    "R0902",  # Too many instance attributes
]

[tool.pylint.typecheck]
extension-pkg-allow-list = ["netifaces"]

[tool.pylint.format]
max-line-length = 130

[tool.pylint.design]
max-args = 10
max-locals = 16
max-returns = 6
max-branches = 14
max-statements = 50

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
verbose
-ra
 -q
  --strict-markers
   --cov=src
    --cov-report=html
     --cov-report=term-missing
"""
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Ruff configuration
[tool.ruff]
line-length = 130
target-version = "py39"
select = ["E", "F", "W", "I", "B", "C4", "ARG", "SIM"]
ignore = []
exclude = [
    ".git",
    ".eggs",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
]

[tool.ruff.isort]
known-first-party = ["network_security_suite"]

[tool.ruff.mccabe]
max-complexity = 12

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]
