[project]
name = "netguard"
version = "0.1.0"
description = "Enterprise-level network security sniffer with ML capabilities"
authors = [{name = "Juan Julián Paniagua Rico"}]
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "scapy>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-extra-types>=2.1.0",
    "pandas>=2.1.0",
    "polars>=0.19.0",
    "pyarrow>=14.0.1",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "asyncio>=3.4.3",
    "python-multipart>=0.0.18",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "netifaces>=0.11.0",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "mkdocs-material>=9.6.22",
    "mkdocstrings[python]>=0.30.1",
    "typer[all]>=0.19.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "faker>=19.12.0",
    # Code Quality (ruff replaces: black, isort, pylint, flake8)
    "ruff>=0.1.6",
    "mypy>=1.6.0",
    # Security
    "bandit>=1.7.5",
    "safety>=2.3.0",
    # Git Hooks
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Ruff Configuration (replaces black, isort, pylint, flake8)
# ============================================================================

[tool.ruff]
# Line length to match your preferences
line-length = 100
target-version = "py39"

# Enable these rule sets
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint rules
    "RUF",   # ruff-specific rules
]

# Ignore specific rules if needed
lint.ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
]

# Exclude directories
exclude = [
    ".git",
    ".eggs",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "__pycache__",
]

# File-specific ignores
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # Unused function argument (common in fixtures)
    "PLR2004", # Magic values (common in tests)
]
"__init__.py" = [
    "F401",    # Unused imports (re-exports)
]

# Import sorting configuration
[tool.ruff.lint.isort]
known-first-party = ["netguard"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]

# Pylint-style complexity check
[tool.ruff.lint.mccabe]
max-complexity = 12

# Formatting configuration (Black-compatible)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ============================================================================
# MyPy Configuration (Type Checking)
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "scapy.*",
    "sklearn.*",
    "netifaces.*",
    "pandas.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src/netguard",
    "--cov-report=html",
    "--cov-report=term-missing:skip-covered",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src/netguard"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    "*/migrations/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Bandit Security Configuration
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]

# ============================================================================
# Dependency Groups (uv specific)
# ============================================================================

[dependency-groups]
dev = [
    "pipdeptree>=2.28.0",
    "pytest-cov>=7.0.0",
    "ty>=0.0.11",
]
