[package]
name = "netguard-launcher"
version = "0.1.0"
edition = "2024"


[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# TUI (stub phase 1-3, implement phase 4+)
ratatui = "0.26"
crossterm = "0.27"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "1"
anyhow = "1"      # only in main.rs and test code, never in library code

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# IPC
uuid = { version = "1", features = ["v4"] }

# Config
dirs = "5"

# Resource limits (Unix only)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["resource", "process"] }

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true